tests for user login
